[package]
name = "latexmk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# structopt = "*"
# tokio = { version = "1", features = ["macros", "time", "io-std", "rt-multi-thread"] }
serde = "*"
clap = "3.0.0-beta.4"
clap_generate = "3.0.0-beta.4"

